# Figma-Context-MCP

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  README.ja.md  README.ko.md  README.md  README.zh-tw.md  README.zh.md  SECURITY.md  docker-compose.yml  eslint.config.js  image-converter-usage.zh.md  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  server.json  server.sh  smithery.yaml  start-service.sh  styles.css  test.json  test_file.txt  tmp.md  tsconfig.json  tsconfig.webpack.json  tsup.config.ts  webpack.config.js
.changeset/: chubby-garlics-pay.md  major-shoes-carry.md  ready-frogs-shave.md  yellow-cougars-study.md
.codex-plugin/: plugin.json
.github/workflows/: release.yml
design-system/: index.html  package-lock.json  package.json  tailwind.config.ts
design-system/src/: App.tsx  index.css
docs/: gitlab-example.md
python_mcp/: .gitignore  README.md  pyproject.toml  requirements.txt
python_mcp/mcp/: __init__.py  cli.py  config.py  mcp.py  server.py
python_mcp/mcp/services/: figma_service.py  simplify_node_response.py
python_mcp/mcp/transformers/: __init__.py  effects.py  layout.py  style.py
python_mcp/mcp/utils/: common.py  identity.py  logger.py  sanitization.py
python_mcp/tests/: test_benchmark.py  test_integration.py
scripts/: benchmark-simplify.ts  compare-formats.ts  render-fixture.ts  scan-hidden-chars.mjs
src/: App.tsx  bin.ts  cli.ts  config.ts  custom.d.ts  exec-mode.ts  index.html  index.ts  index.tsx  mcp-server.ts  mcp.ts  server.ts
src/commands/: fetch.ts
(+101 files in other folders)
